<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Find Devices on Wifi</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_device">Display Device</string>
    <string name="scanning">Searching Devices</string>
    <string name="scanning_your_network">Finding devices on your network</string>
    <string name="not_connected_error">Enable WiFi to start finding devices</string>
    <string name="ipLabel">IP Address:</string>
    <string name="mac_label">Mac Address:</string>
    <string name="deviceName">Device Name</string>
    <string name="ipPlaceholder">Device IP</string>
    <string name="macHolder">MAC Address</string>

</resources>
