<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:orientation="horizontal"
    card_view:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/abc_search_url_text_normal"
        android:elevation="15dp"
        android:padding="2dp">


        <TextView
            android:id="@+id/deviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:text="@string/deviceName"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/deviceIp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ipLabel"
            android:layout_toRightOf="@+id/ipLabel"
            android:text="@string/ipPlaceholder"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ipLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/deviceName"
            android:text="@string/ipLabel"
            android:textColor="@color/abc_primary_text_material_light"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/macAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/macLabel"
            android:layout_toRightOf="@+id/macLabel"
            android:text="@string/macHolder"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/macLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ipLabel"
            android:paddingTop="10dp"
            android:text="@string/mac_label"
            android:textColor="@color/abc_primary_text_material_light"
            android:textSize="14sp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>
